@@ -3,152 +3,87 @@ package de.hhn.it.devtools.components.textBasedLabyrinth.textbasedlabyrinth;
 
 
 import de.hhn.it.devtools.components.textBasedLabyrinth.textbasedlabyrinth.exceptions.RoomFailedException;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 /**
- * Room Class for the Game, defines the Rooms of the Game
- * with assigned next-door Rooms and Items inside it.
+ * Room class for the game, defines the rooms of the game
+ * with assigned next-door rooms and items inside it.
  */
 public class Room {
 
-
-  private HashMap<Integer, Item> items;
-  private int roomId;
-
-  private String description;
-
-  public Room toTheNorth;
-  public Room toTheSouth;
-  public Room toTheEast;
-  public Room toTheWest;
-
-  public Boolean isNorthAssigned;
-  public Boolean isSouthAssigned;
-  public Boolean isEastAssigned;
-  public Boolean isWestAssigned;
-
-  private Door westDoor;
-  private Door eastDoor;
-  private Door northDoor;
-  private Door southDoor;
-  private boolean hasDoorN;
-  private boolean hasDoorW;
-  private boolean hasDoorE;
-  private boolean hasDoorS;
-
-  public boolean isExit;
+  protected HashMap<Integer, Item> items;
+  protected HashMap<Direction, Room> roomMap;
+  protected HashMap<Direction, Door> doorMap;
+  protected ArrayList<Direction> directions;
+  protected int roomId;
+  private final String description;
+  protected boolean isExit;
 
   /**
-   * Constructor of Room.
+   * Constructor of room.
    *
-   * @param id ID of the room
+   * @param id ID of the room.
+   * @param description the description of the rooms' appearance.
    */
   public Room(int id, String description) {
     this.roomId = id;
-    this.isNorthAssigned = false;
-    this.isSouthAssigned = false;
-    this.isEastAssigned = false;
-    this.isWestAssigned = false;
-    this.hasDoorS = false;
-    this.hasDoorE = false;
-    this.hasDoorN = false;
-    this.hasDoorW = false;
-
     items = new HashMap<>();
+    roomMap = new HashMap<>();
+    doorMap = new HashMap<>();
+    directions = new ArrayList<>();
+    directions.add(Direction.NORTH);
+    directions.add(Direction.EAST);
+    directions.add(Direction.SOUTH);
+    directions.add(Direction.WEST);
     this.description = description;
   }
 
   public void addItem(Item item) {
     items.put(item.getItemId(), item);
-
   }
 
-  public Room getRoom(Direction direction){
-    Room room = null;
-    if(direction.equals(Direction.SOUTH)){
-      room = toTheSouth;
+  public Room getRoom(Direction direction) throws RoomFailedException {
+    if(!roomMap.containsKey(direction)) {
+      throw new RoomFailedException("No Room in this direction" + direction);
     }
-    else if(direction.equals(Direction.NORTH)){
-      room = toTheNorth;
-    }
-    else if(direction.equals(Direction.EAST)){
-      room = toTheEast;
-    }
-    else{
-      room = toTheSouth;
-    }
-    return room;
+    return roomMap.get(direction);
   }
 
-  /**
-   * Gets the doors for the new Room.
-   */
+
   public void setDoors() {
-    Random random = new Random();
-    int a = 0;
+    for (Direction direction : directions) {
+      if (roomMap.containsKey(direction)) {
+        Direction oppositeDirection = direction.getOpposite();
+        if (roomMap.get(direction).getDoorMap().containsKey(oppositeDirection)) {
+          doorMap.put(direction, roomMap.get(direction).getDoorMap().get(oppositeDirection));
+        } else {
+          doorMap.put(direction, new Door());
+        }
+      }
+    }
+  }
 
-    if (isSouthAssigned) {
-      if (toTheSouth.hasSouthDoor()) {
-        southDoor = toTheSouth.getSouthDoor();
-      } else {
-        southDoor = new Door();
-      }
-      hasDoorS = true;
-    } else {
-      //This is a demo for a false door,
-      //a door that opens and reveals a wall.
-      a = random.nextInt(0, 4);
-      if (a == 1) {
-        southDoor = new Door();
-        southDoor.isFake();
-        isSouthAssigned = true;
-      }
-    }
-    if (isWestAssigned) {
-      if (toTheWest.hasDoorWest()) {
-        westDoor = toTheWest.getWestDoor();
-      } else {
-        westDoor = new Door();
-      }
-      hasDoorW = true;
-    }
-    if (isNorthAssigned) {
-      if (toTheNorth.hasDoorNorth()) {
-        northDoor = toTheNorth.getNorthDoor();
-      } else {
-        northDoor = new Door();
-      }
-      hasDoorN = true;
-    }
-    if (isEastAssigned) {
-      if (toTheEast.hasDoorEast()) {
-        eastDoor = toTheEast.getEastDoor();
-      } else {
-        eastDoor = new Door();
-      }
-      hasDoorE = true;
-    }
 
+  protected void setFakeInDirection(Direction direction) throws IllegalArgumentException {
+    if(roomMap.containsKey(direction)){
+      doorMap.get(direction).isFake();
+    }
+    else {
+      throw new IllegalArgumentException("Direction was invalid for a fake door: " + direction.toString());
+    }
   }
 
   public Door getDoor(Direction direction) throws RoomFailedException {
-    if (direction.equals(Direction.SOUTH) && isSouthAssigned) {
-      return southDoor;
-    } else if (direction.equals(Direction.NORTH) && isNorthAssigned) {
-      return northDoor;
-    } else if (direction.equals(Direction.EAST) && isEastAssigned) {
-      return eastDoor;
-    } else if (direction.equals(Direction.WEST) && isWestAssigned) {
-      return westDoor;
-    } else {
+    if (!doorMap.containsKey(direction)) {
       throw new RoomFailedException("No door found in this direction: " + direction.toString());
     }
-
-
+    else {
+      return doorMap.get(direction);
+    }
   }
 
   public void removeItem(int itemId) {
@@ -159,64 +94,13 @@ public class Room {
     return roomId;
   }
 
+  public HashMap<Direction, Door> getDoorMap() {
+    return doorMap;
+  }
+
   public String getDescription() {
     return description;
   }
-
-  public Door getWestDoor() {
-    return westDoor;
-  }
-
-  public Door getEastDoor() {
-    return eastDoor;
-  }
-
-  public Door getNorthDoor() {
-    return northDoor;
-  }
-
-  public Door getSouthDoor() {
-    return southDoor;
-  }
-
-  public boolean hasSouthDoor() {
-    return hasDoorS;
-  }
-
-  public boolean hasDoorNorth() {
-    return hasDoorN;
-  }
-
-  public boolean hasDoorWest() {
-    return hasDoorW;
-  }
-
-  public boolean hasDoorEast() {
-    return hasDoorE;
-  }
-
-  /**
-   * Get Number od foos.
-   *
-   * @return Number od Doors.
-   */
-  public int getNumberOfDoors() {
-    int a = 0;
-    if (hasDoorS) {
-      a++;
-    }
-    if (hasDoorW) {
-      a++;
-    }
-    if (hasDoorE) {
-      a++;
-    }
-    if (hasDoorN) {
-      a++;
-    }
-    return a;
-  }
-
 
 
   /**
@@ -226,57 +110,96 @@ public class Room {
    * @throws NullPointerException room does not have items
    */
   public List<Item> search() throws NullPointerException {
-    if (items == null) {
-      throw new NullPointerException("Room could not hold items.");
-    }
-    boolean fail = false; // May need later.
-
-    List<Item> items1 = items.values().stream().toList();
-
-    if (items1.isEmpty()) {
-      Item item = new Item(10077001, "NoItem", "opens door");
-      ArrayList<Item> items2 = new ArrayList<>();
-      items2.add(item);
-      return items2;
-    } else {
-      return items1;
-    }
+    List<Item> items1 = items.values().stream().collect(Collectors.toList());
+    return items1;
   }
 
   /**
-   * Set a Room as the Room next door for the current Room and vis versa.
+   * Set a room as the room next door for the current room and vis versa.
    *
-   * @param room Room to be assigned as the next door Room
-   * @param isEast Boolean check to see if the new Room will be to the east of current room
-   * @param isWest Boolean check to see if the new Room will be to the west of current room
-   * @param isNorth Boolean check to see if the new Room will be to the north of current room
+   * @param room room to be assigned as the next door room
    */
-  public void setNextDoorRoom(Room room, Boolean isEast, Boolean isWest, Boolean isNorth) {
-    if (isEast && !isWest && !isNorth && !isEastAssigned) {
-      this.toTheEast = room;
-      this.isEastAssigned = true;
-      room.toTheWest = this;
-      room.isWestAssigned = true;
-    } else if (isWest && !isEast && !isNorth && !isWestAssigned) {
-      this.toTheWest = room;
-      this.isWestAssigned = true;
-      room.toTheWest = this;
-      room.isEastAssigned = true;
-    } else if (isNorth && !isEast && !isWest && !isNorthAssigned) {
-      this.toTheNorth = room;
-      this.isNorthAssigned = true;
-      room.toTheSouth = this;
-      room.isSouthAssigned = true;
-    } else if (!isNorth && !isEast && !isWest && !isSouthAssigned) {
-      this.toTheSouth = room;
-      this.isSouthAssigned = true;
-      room.toTheNorth = this;
-      room.isNorthAssigned = true;
+  public void setNextDoorRoom(Room room,Direction direction) {
+    if(roomMap.containsKey(direction)){
+      roomMap.replace(direction, room);
+      room.getRoomMap().replace(direction.getOpposite(), this);
+    }
+    else {
+      roomMap.put(direction, room);
+      room.getRoomMap().put(direction.getOpposite(), this);
     }
   }
 
-  public void setExit(){
 
+
+  public HashMap<Direction, Room> getRoomMap() {
+    return roomMap;
   }
 
+
+
+  public void setExit(){
+    this.isExit = true;
+  }
+
+  public boolean isExit() {
+    return isExit;
+  }
 }
+
+/**
+ * if (direction.equals(Direction.EAST)) {
+ *       this.toTheEast = room;
+ *       this.isEastAssigned = true;
+ *       room.toTheWest = this;
+ *       room.isWestAssigned = true;
+ *     } else if (direction.equals(Direction.WEST)) {
+ *       this.toTheWest = room;
+ *       this.isWestAssigned = true;
+ *       room.toTheWest = this;
+ *       room.isEastAssigned = true;
+ *     } else if (direction.equals(Direction.NORTH)) {
+ *       this.toTheNorth = room;
+ *       this.isNorthAssigned = true;
+ *       room.toTheSouth = this;
+ *       room.isSouthAssigned = true;
+ *     } else if (direction.equals(Direction.SOUTH)) {
+ *       this.toTheSouth = room;
+ *       this.isSouthAssigned = true;
+ *       room.toTheNorth = this;
+ *       room.isNorthAssigned = true;
+ *     }
+ *
+ *     if (direction.equals(Direction.SOUTH) && !isSouthAssigned) {
+ *       southDoor = new Door();
+ *       isSouthAssigned = true;
+ *       southDoor.isFake();
+ *     } else if (direction.equals(Direction.NORTH) && !isNorthAssigned) {
+ *       northDoor = new Door();
+ *       isNorthAssigned = true;
+ *       northDoor.isFake();
+ *     } else if (direction.equals(Direction.EAST) && !isEastAssigned) {
+ *       eastDoor = new Door();
+ *       isEastAssigned = true;
+ *       eastDoor.isFake();
+ *     } else if (direction.equals(Direction.WEST) && !isWestAssigned) {
+ *       westDoor = new Door();
+ *       isWestAssigned = true;
+ *       westDoor.isFake();
+ *
+ *       public boolean hasSouthDoor() {
+ *     return hasDoorS;
+ *   }
+ *
+ *   public boolean hasDoorNorth() {
+ *     return hasDoorN;
+ *   }
+ *
+ *   public boolean hasDoorWest() {
+ *     return hasDoorW;
+ *   }
+ *
+ *   public boolean hasDoorEast() {
+ *     return hasDoorE;
+ *   }
+ */
